--- a/app/drawerwindow.ui
+++ b/app/drawerwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>452</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,6 +42,8 @@
     <property name="title">
      <string>&amp;Help</string>
     </property>
+    <addaction name="helpAct"/>
+    <addaction name="separator"/>
     <addaction name="aboutAct"/>
     <addaction name="aboutQtAct"/>
    </widget>
@@ -50,6 +52,18 @@
    <addaction name="menu_Help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QDockWidget" name="helpWindow">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="windowTitle">
+    <string>Help</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents"/>
+  </widget>
   <action name="exitAct">
    <property name="text">
     <string>&amp;Exit</string>
@@ -83,6 +97,14 @@
   <action name="aboutQtAct">
    <property name="text">
     <string>About &amp;Qt...</string>
+   </property>
+  </action>
+  <action name="helpAct">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show help</string>
    </property>
   </action>
  </widget>
