--- a/qute/app/aboutbox.ui
+++ b/qute/app/aboutbox.ui
@@ -49,7 +49,7 @@ QLabel#title {
 }
 
 QDialog {
-    background-color: black;
+    background-color: QLinearGradient(x1: 0, y1: 0, x2: 1, y2:1, stop: 0 blue, stop: 1 black);
 }
 
 * {
